--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,50 @@
   width: 1200px;
   margin: 0 auto;
 }
+
+.active{
+  color: #fff700;
+}
+
+.inactive{
+  color: black;
+}
+
+.scroll-indicator{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.data-container{
+  display: flex;flex-direction: column;
+  align-items: center;
+  margin-top: 95px;
+}
+
+.top-container{
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  text-align: center;
+  background-color: #000;
+  color: #fff;
+
+}
+
+.top-container h1{
+  padding: 13px 0;
+}
+
+.scroll-progress-tracking-container{
+  width: 100%;
+  height: 10px;
+  background-color: #aff900;
+}
+
+.current-progress-bar{
+  width: 0%;
+  height: 100%;
+  background-color: #a814e2;
+}
